initiall commit (Basic Logic)

--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
     "ios": {
       "splash": {
         "image": "./assets/images/icon-1920x720.png"
-      }
+      },
+      "bundleIdentifier": "com.anonymous.TVapp"
     },
     "newArchEnabled": true,
     "name": "TVapp",
