--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
             "topShelfWide2x": "./assets/images/icon-4640x1440.png"
           }
         }
-      ]
+      ],
+      "expo-font"
     ],
     "android": {
       "edgeToEdgeEnabled": true,
