--- a/app.json
+++ b/app.json
@@ -16,7 +16,14 @@
           }
         }
       ],
-      "expo-font"
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "node_modules/@expo-google-fonts/inter/900Black/Inter_900Black.ttf"
+          ]
+        }
+      ]
     ],
     "android": {
       "edgeToEdgeEnabled": true,
